tests/group_expr_missing_inner_expr_diag/expected_diagnostics.txt
grammar.peg:1:9: error: Expected an expression after this.
 1 | Root <- (
   |         ~
